# dio_bank

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: dio_bank.drawio
migrations/: env.py
migrations/versions/: 0505a18264b6_create_transaction_table.py  522538604e15_create_user_table.py  788395a3c50b_create_account_table_and_relationship.py
src/: exception_handler.py  main.py  settings.py
src/controllers/: account_controller.py  auth_controller.py  user_controller.py
src/databases/: bank_db.py
src/models/: __init__.py  account_model.py  transaction_model.py  user_model.py
src/schemas/: user_schemas.py
src/services/: account_services.py  auth_services.py  transaction_services.py  user_services.py
src/utils/: cryptography.py  exceptions.py
tests/: conftest.py
tests/integration/controllers/account_controller/: test_create_account.py  test_create_transaction.py  test_delete_account.py  test_get_account.py  test_get_transaction.py  test_update_account.py
tests/integration/controllers/user_controller/: test_create_user.py  test_delete_user.py  test_get_user.py  test_update_user.py
web_bank/: manage.py
web_bank/web_bank/: asgi.py  settings.py  urls.py  wsgi.py
