[project]
name = "dio-bank"
version = "0.1.0"
description = "Bank transactions API in Python using the FastAPI framework"
authors = [
    {name = "Gabryel_Brz",email = "gabrielbarbosa.alternativa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlmodel (>=0.0.24,<0.0.25)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.format]
quote-style = "single"
