[project]
name = "dio-bank"
version = "0.1.0"
description = "Bank transactions API in Python using the FastAPI framework"
authors = [
    {name = "Gabryel_Brz",email = "gabrielbarbosa.alternativa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "passlib (>=1.7.4,<2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pytest-lazy-fixtures (==1.1.2)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
addopts = "-ra -vvv"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"
pytest-asyncio = "^0.26.0"
