[project]
name = "dio-bank"
version = "0.1.0"
description = "Bank transactions API in Python using the FastAPI framework"
authors = [
    {name = "Gabryel_Brz",email = "gabrielbarbosa.alternativa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.2,<2.0.0",
    "fastapi[standard]>=0.115.11,<0.116.0",
    "passlib>=1.7.4,<2.0.0",
    "pydantic-settings>=2.8.1,<3.0.0",
    "pyjwt>=2.10.1,<3.0.0",
    "sqlmodel>=0.0.24,<0.0.25",
]

[tool.pytest.ini_options]
addopts = "-ra -vvv"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.format]
quote-style = "single"

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "pytest-lazy-fixtures==1.1.2",
]
